src/test/ui/issues/issue-22289.rs
fn main() {
    0 as &std::any::Any; //~ ERROR non-primitive cast
}
